# RagWithGraphStore

./: DATABASE_ARCHITECTURE.md  MD_FILE_FOR_FLOW_OF_PROJECT.md  README.md  docker-compose.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation-core-rag/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-multi-user-memory/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-06-PLAN.md  02-06-SUMMARY.md  02-07-PLAN.md  02-07-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-ux-streaming/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-RESEARCH.md
.planning/phases/04-langgraph-workflows/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-04-PLAN.md  04-04-SUMMARY.md  04-05-PLAN.md  04-05-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-differentiation/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-production-hardening/: 06-01-PLAN.md  06-02-PLAN.md  06-03-PLAN.md  06-04-PLAN.md  06-05-PLAN.md  06-RESEARCH.md
.planning/phases/07-foundation-authentication/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-05-PLAN.md  07-05-SUMMARY.md  07-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS-backend-v1.md  PITFALLS.md  STACK.md  SUMMARY-backend-v1.md  SUMMARY.md
backend/: .env  .env.example  ARCHITECTURE.md  Neo4j-7bf3243b-Created-2026-02-05.txt  pyproject.toml  requirements.txt  run.md
backend/app/: __init__.py  celery_app.py  config.py  main.py  tasks.py
backend/app/api/: admin.py  auth.py  comparisons.py  documents.py  memory.py  queries.py
backend/app/core/: __init__.py  auth.py  error_handlers.py  exceptions.py  rbac.py  security.py  session.py
backend/app/db/: __init__.py  checkpoint_store.py  mem0_client.py  neo4j_client.py  postgres_client.py  qdrant_client.py  redis_client.py
backend/app/jobs/: cleanup.py
backend/app/models/: document.py  schemas.py  user.py
backend/app/services/: agent_tools.py  chat_agent.py  confidence_service.py  document_processor.py  embedding_service.py  entity_extraction_service.py  generation_service.py  graphrag.md  graphrag_service.py  indexing_service.py  llm_provider.py  memory_service.py  memory_summarizer.py  migration_service.py  retrieval_service.py  simplification_service.py  summarization_service.py  summary_storage.py
backend/app/utils/: task_tracker.py
backend/app/workflows/: __init__.py  document_comparison.py  state.py
backend/app/workflows/nodes/: __init__.py  comparison.py  generation.py  retrieval.py
backend/rag_with_graph_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: backfill_summaries.py  create_admin.py
backend/tests/: __init__.py  conftest.py  test_multi_tenant_isolation.py
frontend/: app.py  requirements.txt
frontend-next/: .gitignore  package-lock.json  package.json
frontend-next/src/: middleware.ts
frontend-next/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx
frontend/pages/: __init__.py  debug.py  home.py  login.py  register.py
frontend/utils/: __init__.py  api_client.py  auth.py  session.py
(+32 files in other folders)
