[project]
name = "rag-with-graph-store"
version = "0.1.0"
description = "RAG system with memory management using Neo4j and Qdrant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAGWithGraphStore Team"}
]

dependencies = [
    "fastapi>=0.126.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]",
    "mem0ai",
    "neo4j>=6.1.0",
    "qdrant-client>=1.16.2",
    "langchain>=1.0",
    "langchain-openai>=1.1.7",
    "pymupdf4llm",
    "python-docx",
    "pyjwt",
    "pwdlib[argon2]",
    "python-dotenv",
    "openai",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
