[project]
name = "rag-with-graph-store"
version = "0.1.0"
description = "RAG system with memory management using Neo4j and Qdrant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RAGWithGraphStore Team"}
]

dependencies = [
    # Core framework
    "fastapi",
    "pydantic[email]",
    "pydantic-settings",
    "uvicorn[standard]",
    # Memory & databases
    "mem0ai",
    "neo4j",
    "qdrant-client",
    # LLM orchestration
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-ollama",
    "langchain-text-splitters",
    "openai",
    # LangGraph workflows
    "langgraph",
    "langgraph-checkpoint-postgres",
    "psycopg[binary]",
    "neo4j-graphrag",
    # Document processing
    "pymupdf4llm",
    "python-docx",
    # Authentication
    "pyjwt",
    "pwdlib[argon2]",
    # Redis, Celery & scheduling
    "redis",
    "celery[redis]",
    "apscheduler",
    # Form data & utilities
    "python-multipart",
    "python-dotenv",
    # SSE streaming
    "sse-starlette",
    "langchain-neo4j>=0.8.0",
    "langchain-experimental>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
